[project]
name = "hybrid-recommendation-engine"
version = "0.1.0"
description = "A hybrid recommendation engine combining collaborative filtering, content-based filtering, deep learning, knowledge graphs, session-based, RL feedback, and trending signals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = ["data", "models_store", "frontend/.next", "frontend/node_modules"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.coverage.run]
source = ["recsys", "backend"]
omit = ["*/tests/*", "*/__init__.py"]
